fix z issue on smaller screens (fixes #184)

--- a/app/assets/stylesheets/views/_base.scss
+++ b/app/assets/stylesheets/views/_base.scss
@@ -20,6 +20,8 @@ body {
 // ---------------------------------------- Content Base
 
 #container .page-content {
+  position: relative;
+  z-index: 1;
 }
 
 
